servless solution code

--- a/infra_deploy.yaml
+++ b/infra_deploy.yaml
@@ -57,7 +57,7 @@ Parameters:
     Description: Select Security group
     Type: List<AWS::EC2::SecurityGroup::Id>
   JobVCPUs:
-    Description: Eneter number of vCPUs for a Job
+    Description: Enter number of vCPUs for a Job
     Type: String
     AllowedValues:
       - 0.25
@@ -67,7 +67,7 @@ Parameters:
       - 4
     Default: 1
   JobMemory:
-    Description: Eneter Memory(GB) required for a Job
+    Description: Enter Memory(GB) required for a Job
     Type: String
     AllowedValues:
       - 512
